Resolved remaining known font sizing and spacing issues

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -1,9 +1,21 @@
-* {
-    font-family: $base-font;
+/*
+   Typography
+   ========================================================================== */
+body {
+  font-family: $base-font;
+  color: $text-color;
+  @include font-size(16, no);
+}
+
+p {
+  @include font-size(18,yes,28);
+}
+
+li {
+  @include font-size(16,12,24);
 }
 
 i {
   font-family: $icons-font;
-  font-size: 28px;
-  line-height: 42px;
+  @include font-size(28, no, 42);
 }
