--- a/_sass/layouts/_sections.scss
+++ b/_sass/layouts/_sections.scss
@@ -3,13 +3,17 @@
   text-align: center;
   position: relative;
   @include media($phablet) {
-    padding: 10rem 0 10rem;
+    padding: 5rem 0;
   }
   @include media($tablet) {
     padding: 5rem 0 5rem;
   }
-  &_heading,
+  &_heading {
+    @include font-size(42,no,42);
+    margin-bottom: 1.2rem;
+  }
   &_description {
+    @include font-size(16,no,16);
     margin-bottom: 1.2rem;
   }
   &_link {
@@ -34,34 +38,29 @@
     background-color: $darker-blue;
     color: $white;
     @include media($phablet) {
-      padding-bottom: 12rem;
+      padding: 5em 0;
       text-align: left;
-      //height: 165px;
-    }
-    @include media($tablet) {
-      padding: 5em 0 10rem;
-      //height: 190px;
     }
     @include media($desktop) {
-      padding: 12rem 0 12rem;
+      padding: 8rem 0;
     }
     &_heading {
       font-weight: 700;
+      @include font-size(38, no, 38);
       margin-bottom: 1.2rem;
       opacity: 0;
       @include animation--fadeInDown(0);
+      @include media($phablet) {
+      @include font-size(48, no);
+      margin-bottom: 1.2rem;
+      }
     }
     &_description {
-      margin-bottom: 4rem;
+      @include font-size(18, no);
+      margin-bottom: 5rem;
       font-style: italic;
       opacity: 0;
       @include animation--fadeInDown(0.4);
-      @include media($phablet) {
-        font-size: 2.4rem;
-      }
-      @include media($desktop) {
-        margin-bottom: 10rem;
-      }
     }
     &_profile {
       float: right;
